--- a/tests/unit/unit_bucket_map_top_k.yml
+++ b/tests/unit/unit_bucket_map_top_k.yml
@@ -1,7 +1,7 @@
 unit_tests:
   - name: unit_macro_bucket_map_top_k
     description: "bucket_map top_k policy keeps only the first k categories"
-    model: ref('macro_bucket_map_top_k')
+    model: macro_bucket_map_top_k
     given:
       - input: ref('macro_rank_base_data')
         rows:
@@ -17,10 +17,10 @@ unit_tests:
           - { category: 'v1.10' }
     expect:
       rows:
-        - { category_raw: 'A', row_count: 2, metric_value: 2, bucket: 'A', kept: true, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}', params_hash: '805B79F6CA7821D2714B207FE6999B55' }
-        - { category_raw: 'B', row_count: 2, metric_value: 2, bucket: 'B', kept: true, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}', params_hash: '805B79F6CA7821D2714B207FE6999B55' }
-        - { category_raw: 'C', row_count: 2, metric_value: 2, bucket: 'C', kept: true, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}', params_hash: '805B79F6CA7821D2714B207FE6999B55' }
-        - { category_raw: '10', row_count: 1, metric_value: 1, bucket: '__other__', kept: false, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}', params_hash: '805B79F6CA7821D2714B207FE6999B55' }
-        - { category_raw: '2', row_count: 1, metric_value: 1, bucket: '__other__', kept: false, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}', params_hash: '805B79F6CA7821D2714B207FE6999B55' }
-        - { category_raw: 'v1.10', row_count: 1, metric_value: 1, bucket: '__other__', kept: false, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}', params_hash: '805B79F6CA7821D2714B207FE6999B55' }
-        - { category_raw: 'v1.2', row_count: 1, metric_value: 1, bucket: '__other__', kept: false, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}', params_hash: '805B79F6CA7821D2714B207FE6999B55' }
+        - { category_raw: 'A', row_count: 2, metric_value: 2, bucket: 'A', kept: true, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}' }
+        - { category_raw: 'B', row_count: 2, metric_value: 2, bucket: 'B', kept: true, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}' }
+        - { category_raw: 'C', row_count: 2, metric_value: 2, bucket: 'C', kept: true, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}' }
+        - { category_raw: '10', row_count: 1, metric_value: 1, bucket: '__other__', kept: false, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}' }
+        - { category_raw: '2', row_count: 1, metric_value: 1, bucket: '__other__', kept: false, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}' }
+        - { category_raw: 'v1.10', row_count: 1, metric_value: 1, bucket: '__other__', kept: false, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}' }
+        - { category_raw: 'v1.2', row_count: 1, metric_value: 1, bucket: '__other__', kept: false, pinned: false, num_buckets: 4, policy: 'top_k', policy_params: '{"coverage":0.8,"k":3,"min_share":0.05,"min_categories":3,"other_label":"__other__","pins":[],"tiebreaker":"alpha","metric_expression":"COUNT(*)"}' }
