--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -143,3 +143,49 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
+
+  tag-release:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.actor != 'nektos/act'
+    needs: docs
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Extract project version
+        id: version
+        run: |
+          set -euo pipefail
+          VERSION=$(grep -E '^version:' dbt_project.yml | head -n 1 | awk '{print $2}' | tr -d '"')
+          if [ -z "$VERSION" ]; then
+            echo "Could not find version in dbt_project.yml" >&2
+            exit 1
+          fi
+          TAG="v${VERSION}"
+          LAST_TAG=$(git tag --list 'v*' --sort=-version:refname | head -n 1)
+          if [ -n "$LAST_TAG" ]; then
+            if [ "$TAG" = "$LAST_TAG" ]; then
+              echo "skip=true" >> "$GITHUB_OUTPUT"
+              echo "Tag $TAG already exists; skipping."
+              exit 0
+            fi
+            if [ "$(printf '%s\n%s\n' "${LAST_TAG#v}" "$VERSION" | sort -V | tail -n1)" != "$VERSION" ]; then
+              echo "Detected version $VERSION is not greater than latest tag ${LAST_TAG#v}" >&2
+              exit 1
+            fi
+          fi
+          echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
+          echo "tag=${TAG}" >> "$GITHUB_OUTPUT"
+          echo "Project version: $TAG"
+
+      - name: Create and push tag
+        if: steps.version.outputs.skip != 'true'
+        env:
+          TAG: ${{ steps.version.outputs.tag }}
+        run: |
+          git tag -a "$TAG" -m "Release $TAG"
+          git push origin "$TAG"
