--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -174,16 +174,16 @@ jobs:
             echo "Could not find version in dbt_project.yml" >&2
             exit 1
           fi
-          TAG="v${VERSION}"
-          LAST_TAG=$(git tag --list 'v*' --sort=-version:refname | head -n 1)
+          TAG="${VERSION}"
+          LAST_TAG=$(git tag --list | sort -V | tail -n 1)
           if [ -n "$LAST_TAG" ]; then
             if [ "$TAG" = "$LAST_TAG" ]; then
               echo "skip=true" >> "$GITHUB_OUTPUT"
               echo "Tag $TAG already exists; skipping."
               exit 0
             fi
-            if [ "$(printf '%s\n%s\n' "${LAST_TAG#v}" "$VERSION" | sort -V | tail -n1)" != "$VERSION" ]; then
-              echo "Detected version $VERSION is not greater than latest tag ${LAST_TAG#v}" >&2
+            if [ "$(printf '%s\n%s\n' "$LAST_TAG" "$TAG" | sort -V | tail -n1)" != "$TAG" ]; then
+              echo "Detected version $TAG is not greater than latest tag $LAST_TAG" >&2
               exit 1
             fi
           fi
